[build-system]
requires = [
    # Building with numpy 2.0 is compatible with numpy 1.x, but it
    # is only available on Python 3.9+
    "numpy >= 2.0.0; python_version > '3.8'",
    "oldest-supported-numpy; python_version <= '3.8'",
    "setuptools>=49.5.0",
    "pybind11",
    "cmake"
]
build-backend = "setuptools.build_meta"

